--- a/package.json
+++ b/package.json
@@ -14,25 +14,28 @@
     "url": "https://github.com/timur-gilauri/react-homework/issues"
   },
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "tsc && webpack --mode development",
     "prod": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open --hot",
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@types/jest": "^24.9.0",
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-test-renderer": "^16.9.2",
@@ -44,6 +47,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.5.3",
     "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
@@ -51,8 +55,12 @@
     "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "ts-jest": "^26.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
@@ -60,19 +68,24 @@
   "jest": {
     "moduleFileExtensions": [
       "js",
+      "ts",
       "json",
-      "jsx"
+      "jsx",
+      "tsx"
     ],
     "roots": [
       "<rootDir>/tests/",
       "<rootDir>/src/"
     ],
     "rootDir": ".",
-    "testRegex": ".spec.js$",
+    "testRegex": ".spec.tsx",
     "coverageDirectory": "../coverage",
     "collectCoverageFrom": [
       "src/**/*.js"
     ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
     "testEnvironment": "node"
   }
 }
