--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "jsx": "react",
-    "outDir": "./dist",
+    "allowJs": true,
     "sourceMap": false,
     "declaration": false,
     "allowUnusedLabels": true,
@@ -17,10 +17,12 @@
     "lib": [
       "dom",
       "DOM.Iterable",
-      "es2016"
+      "es2015",
+      "es2016",
+      "es2017"
     ],
     "module": "commonjs",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "allowSyntheticDefaultImports": true
   },
   "exclude": [
