--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -1,10 +1,13 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "module": "commonjs",
+    "jsx": "react",
+    "sourceMap": false,
+    "esModuleInterop": true,
+    "noImplicitAny": true,
     "target": "es5",
-    "sourceMap": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "module": "commonjs",
+    "baseUrl": "./",
+    "allowSyntheticDefaultImports": true
+  }
 }
